add_executable(client
  main.cpp
  FizzContext.cpp
  HQClient.cpp
  HQLoggerHelper.cpp
  HQParams.cpp
  SampleHandlers.cpp
  PartiallyReliableCurlClient.cpp
  CurlClient.cpp
  )

target_link_libraries(client
  PUBLIC
  proxygen::proxygen
  proxygen::proxygenhttpserver
  mvfst::mvfst_transport
  mvfst::mvfst_client
  mvfst::mvfst_server
  )
